--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <h1>Socket IO Chat</h1>
-    <label for="handle">Handle</label>
-    <input type="text" class="text-input" name="handle" id="handle" placeholder="Enter your handle">
-    <label for="message">Message Log</label>
+    <label for="handle" class="label">Handle</label>
+    <input type="text" class="text-input" id="handle" placeholder="Enter your handle">
+    <label for="message" class="label">Message Log</label>
     <div class="messages" id="messages"></div>
-    <input type="text"  class="text-input" placeholder="Enter your chat message">
-
+    <input type="text"  class="text-input" id="message" placeholder="Enter your chat message">
+    <input type="submit" class="button-input" value="&rightarrow;" disabled>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
     <script src="script/app.js"></script>
 </body>
