Added containing message container and styling

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Socket IO Chat</h1>
     <label for="handle" class="label">Handle</label>
-    <input type="text" class="handle" id="handle" placeholder="Enter your handle">
+    <input type="text" class="handle" id="handle" placeholder="Enter your handle" autofocus>
     <label for="messages" class="label">Message Log</label>
     <div class="messages" id="messages"></div>
     <input type="text"  class="message" id="message" placeholder="Enter your chat message">
