--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,10 @@
 <body>
     <h1>Socket IO Chat</h1>
     <label for="handle" class="label">Handle</label>
-    <input type="text" class="handle" id="handle" placeholder="Enter your handle" autofocus>
+    <input type="text" class="handle" id="handle" placeholder="Enter your handle">
     <label for="messages" class="label">Message Log</label>
     <div class="messages" id="messages"></div>
-    <input type="text"  class="message" id="message" placeholder="Enter your chat message">
+    <input type="text"  class="message" id="message" placeholder="Enter your chat message" autofocus>
     <button type="button" class="message-submit-button" id="button">&rightarrow;</button>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
     <script src="script/app.js"></script>
